--- a/TypeScript/package.json
+++ b/TypeScript/package.json
@@ -7,11 +7,11 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "default": "./dist/index.js",
       "import": "./dist/index.mjs",
       "module": "./dist/esm/index.js",
       "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
   "sideEffects": false,
